src/test/ui/unsized-enum2.stderr
error[E0277]: `W` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:33:8
   |
LL |     VA(W),
   |        ^ `W` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `W`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = help: consider adding a `where W: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `X` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:35:8
   |
LL |     VB{x: X},
   |        ^^^^ `X` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `Y` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:37:15
   |
LL |     VC(isize, Y),
   |               ^ `Y` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Y`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = help: consider adding a `where Y: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `Z` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:39:18
   |
LL |     VD{u: isize, x: Z},
   |                  ^^^^ `Z` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Z`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = help: consider adding a `where Z: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[u8]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:43:8
   |
LL |     VE([u8]),
   |        ^^^^ `[u8]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `str` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:45:8
   |
LL |     VF{x: str},
   |        ^^^^^^ `str` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[f32]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:47:15
   |
LL |     VG(isize, [f32]),
   |               ^^^^^ `[f32]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[f32]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[u32]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:49:18
   |
LL |     VH{u: isize, x: [u32]},
   |                  ^^^^^^^^ `[u32]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u32]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `Foo + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:63:8
   |
LL |     VM(Foo),
   |        ^^^ `Foo + 'static` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Foo + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `Bar + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:65:8
   |
LL |     VN{x: Bar},
   |        ^^^^^^ `Bar + 'static` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Bar + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `FooBar + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:67:15
   |
LL |     VO(isize, FooBar),
   |               ^^^^^^ `FooBar + 'static` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `FooBar + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `BarFoo + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:69:18
   |
LL |     VP{u: isize, x: BarFoo},
   |                  ^^^^^^^^^ `BarFoo + 'static` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `BarFoo + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[i8]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:73:8
   |
LL |     VQ(<&'static [i8] as Deref>::Target),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `[i8]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[i8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[char]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:75:8
   |
LL |     VR{x: <&'static [char] as Deref>::Target},
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `[char]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[char]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[f64]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:77:15
   |
LL |     VS(isize, <&'static [f64] as Deref>::Target),
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `[f64]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[f64]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `[i32]` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:79:18
   |
LL |     VT{u: isize, x: <&'static [i32] as Deref>::Target},
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `[i32]` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[i32]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `PathHelper1 + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:53:8
   |
LL |     VI(Path1),
   |        ^^^^^ `PathHelper1 + 'static` does not have a constant size known at compile-time
   |
   = help: within `Path1`, the trait `std::marker::Sized` is not implemented for `PathHelper1 + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: required because it appears within the type `Path1`
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `PathHelper2 + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:55:8
   |
LL |     VJ{x: Path2},
   |        ^^^^^^^^ `PathHelper2 + 'static` does not have a constant size known at compile-time
   |
   = help: within `Path2`, the trait `std::marker::Sized` is not implemented for `PathHelper2 + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: required because it appears within the type `Path2`
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `PathHelper3 + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:57:15
   |
LL |     VK(isize, Path3),
   |               ^^^^^ `PathHelper3 + 'static` does not have a constant size known at compile-time
   |
   = help: within `Path3`, the trait `std::marker::Sized` is not implemented for `PathHelper3 + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: required because it appears within the type `Path3`
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: `PathHelper4 + 'static` does not have a constant size known at compile-time
  --> $DIR/unsized-enum2.rs:59:18
   |
LL |     VL{u: isize, x: Path4},
   |                  ^^^^^^^^ `PathHelper4 + 'static` does not have a constant size known at compile-time
   |
   = help: within `Path4`, the trait `std::marker::Sized` is not implemented for `PathHelper4 + 'static`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types--sized>
   = note: required because it appears within the type `Path4`
   = note: no field of an enum variant may have a dynamically sized type

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0277`.
